fix alignment of large image in twoUp-gallery

--- a/src/scss/framework/styles/_patterns.scss
+++ b/src/scss/framework/styles/_patterns.scss
@@ -130,6 +130,9 @@
     }
   }
   .twoUp-gallery-img-lg {
+    &.alignright {
+      margin-inline-start: 0; /* makes inner image not have a start margin */
+    }
     img {
       max-width: 100%;
       margin-right: 0;
